--- a/giao-dien.html
+++ b/giao-dien.html
@@ -8,93 +8,329 @@
 	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>
-	<div id="top-page" class="container">
-	<img src="img/bai-1-tin-tuc_02.jpg">
-	</div>
-	<div id="body-page" class="container">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-			  <a class="navbar-brand" href="#">HOME</a>
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-			    <span class="navbar-toggler-icon"></span>
-			  </button>
-			  <div class="collapse navbar-collapse" id="navbarText">
-			    <ul class="navbar-nav mr-auto">
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">LEVEL1</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">PAGE A</a>
-			      </li>
-			      <li class="nav-item">
-			        <a class="nav-link" href="#">PAGE B</a>
-			      </li>
-			       <li class="nav-item">
-			        <a class="nav-link" href="#">PAGE C</a>
-			      </li>
-			       <li class="nav-item">
-			        <a class="nav-link" href="#">SPORT</a>
-			      </li>
-			       <li class="nav-item">
-			        <a class="nav-link" href="#">WEATHER</a>
-			      </li>
-			    </ul>
-			  </div>
-		</nav>
-		<br>
-	<div class="row">
-		<div class="col-8">
-		<img width="100%" src="img/bai-1-tin-tuc_06.jpg">
+	<div id="box-page" class="container">
+		<div id="banner">
+			<img src="img/bai-1-tin-tuc_02.jpg">
 		</div>
-				<div class="col-4" id="box">
-					<div id="khoi_1">
+		<ul id="main-menu" class="nav">
+			  <li class="nav-item">
+			    <a class="nav-link active" href="#">HOME</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">LEVEL1</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">PAGE A</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">PAGE B</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">PAGE C</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link" href="#">SPORT</a>
+			  </li>
+			  <li class="nav-item">
+			    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">WEATHER</a>
+			  </li>
+		</ul>
+
+		<div id="body-page" class="container">
+			<div class="row">
+				<div class="col-8" id="cach">
+					<img width="100%" src="img/bai-1-tin-tuc_06.jpg">
+					&ensp;
+						<div id="box" class="container">
+							<div class="row">
+								<div style="border-bottom: #ebebeb solid 1px" class="col-12">
+								<h1>RECENT POSTS</h1>
+								</div>
+								<div style="border-bottom: #ebebeb solid 1px; padding-bottom: 20px;" id="cach" class="col-6">
+									<img width="105%" src="img/bai-1-tin-tuc_19.jpg">
+								</div>
+								<div style="border-bottom: #ebebeb solid 1px" id="cach" class="col-6">
+									<h2>Fusce dapibus tellus ac cursus</h2>
+									<h3>by Michelle Malkin On September 05,2008 0 Comment</h3>
+									<h3>All children, except one, grow up. They soon know that they will grow up, and the way Wendy knew was this. One day when she was two years old she was playing in the garden, and she plucked another flower and ran with it to her mother. I suppose she must have looked rather delightful,[...]</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+							</div>	
+					</div>
+<br>
+					<div id="box" class="container">
+							<div class="row">
+								<div style="border-bottom: #ebebeb solid 1px" class="col-12">
+								<h1>TECH</h1>
+								</div>
+								<div style="border-bottom: #ebebeb solid 1px; padding-bottom: 20px;" id="cach" class="col-6">
+									<img width="105%" src="img/bai-1-tin-tuc_19.jpg">
+								</div>
+								<div style="border-bottom: #ebebeb solid 1px" id="cach" class="col-6">
+									<h2>Fusce dapibus tellus ac cursus</h2>
+									<h3>by Michelle Malkin On September 05,2008 0 Comment</h3>
+									<h3>All children, except one, grow up. They soon know that they will grow up, and the way Wendy knew was this. One day when she was two years old she was playing in the garden, and she plucked another flower and ran with it to her mother. I suppose she must have looked rather delightful,[...]</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+							</div>	
+					</div>
+<br>
+					<div id="box" class="container">
+							<div class="row">
+								<div style="border-bottom: #ebebeb solid 1px" class="col-12">
+								<h1>CAT B</h1>
+								</div>
+								<div style="border-bottom: #ebebeb solid 1px; padding-bottom: 20px;" id="cach" class="col-6">
+									<img width="105%" src="img/bai-1-tin-tuc_19.jpg">
+								</div>
+								<div style="border-bottom: #ebebeb solid 1px" id="cach" class="col-6">
+									<h2>Fusce dapibus tellus ac cursus</h2>
+									<h3>by Michelle Malkin On September 05,2008 0 Comment</h3>
+									<h3>All children, except one, grow up. They soon know that they will grow up, and the way Wendy knew was this. One day when she was two years old she was playing in the garden, and she plucked another flower and ran with it to her mother. I suppose she must have looked rather delightful,[...]</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+								<div id="cach" class="col-1">
+									<img width="220%" src="img/bai-1-tin-tuc_12.jpg">
+								</div>
+								<div id="cach" class="col-5">
+									<h2>Donec ullamcorper nulla non metus</h2>
+									<h3>September 04,2008</h3>
+								</div>
+							</div>	
+					</div>
+					<br><br>
+
+				</div>
+
+
+				<div class="col-4" id="cach">
+					<div id="box" class="container">
 						<div class="row">
-							<div id="khoi_2" class="col-12">
-								<div class="row">
-									<div class="col-3 offset-1">
-										<img src="img/bai-1-tin-tuc_14.jpg">
-									</div>
-									<div class="col-8">
-										<h>Sed posuere consectetur est</h>
-										<br>
-										<h>march 03,2008</h>
-									</div>
-								</div>
-							</div>
-
-							<div id="khoi_2" class="col-12">
-								<div class="row">
-									<div class="col-3 offset-1">
-										<img src="img/bai-1-tin-tuc_14.jpg">
-									</div>
-									<div class="col-8">
-										<h>Sed posuere consectetur est</h>
-										<br>
-										<h>march 03,2008</h>
-									</div>
-								</div>
-							</div>
-
-							<div id="khoi_2" class="col-12">
-								<div class="row">
-									<div class="col-3 offset-1">
-										<img src="img/bai-1-tin-tuc_14.jpg">
-									</div>
-									<div class="col-8">
-										<h>Sed posuere consectetur est</h>
-										<br>
-										<h>march 03,2008</h>
-									</div>
-								</div>
-							</div>
+							<div class="col-12"><h1>CATEGORY NAME</h1></div>
+							<div style="padding-bottom: 10px; padding-top: 10px; border-bottom: #ebebeb solid 1px" class="col-2"><img width="220%" src="img/bai-1-tin-tuc_12.jpg"></div>
+							<div style="border-bottom: #ebebeb solid 1px; padding-top: 10px" class="col-10"><h2>Fusce dapibus tellus ac</h2>
+							<h3>September 04,2008</h3></div>
+							<div style="padding-bottom: 10px; padding-top: 10px; border-bottom: #ebebeb solid 1px" class="col-2"><img width="220%" src="img/bai-1-tin-tuc_12.jpg"></div>
+							<div style="border-bottom: #ebebeb solid 1px; padding-top: 10px" class="col-10"><h2>Sed posuere consectetur est</h2>
+							<h3>September 04,2008</h3></div>
+							<div style="padding-bottom: 10px; padding-top: 10px; border-bottom: #ebebeb solid 1px" class="col-2"><img width="220%" src="img/bai-1-tin-tuc_12.jpg"></div>
+							<div style="border-bottom: #ebebeb solid 1px; padding-top: 10px" class="col-10"><h2>Donec ullamcorper nulla non metus</h2>
+							<h3>September 04,2008</h3></div>
+						</div>
+					</div>
+<br>
+					<div id="box" class="container">
+						<div class="row">
+							<div class="col-12"><h1>CATEGORY NAME</h1></div>
+							<div style="padding-bottom: 10px; padding-top: 10px; border-bottom: #ebebeb solid 1px" class="col-2"><img width="220%" src="img/bai-1-tin-tuc_12.jpg"></div>
+							<div style="border-bottom: #ebebeb solid 1px; padding-top: 10px" class="col-10"><h2>Fusce dapibus tellus ac</h2>
+							<h3>September 04,2008</h3></div>
+							<div style="padding-bottom: 10px; padding-top: 10px; border-bottom: #ebebeb solid 1px" class="col-2"><img width="220%" src="img/bai-1-tin-tuc_12.jpg"></div>
+							<div style="border-bottom: #ebebeb solid 1px; padding-top: 10px" class="col-10"><h2>Sed posuere consectetur est</h2>
+							<h3>September 04,2008</h3></div>
+							<div style="padding-bottom: 10px; padding-top: 10px; border-bottom: #ebebeb solid 1px" class="col-2"><img width="220%" src="img/bai-1-tin-tuc_12.jpg"></div>
+							<div style="border-bottom: #ebebeb solid 1px; padding-top: 10px" class="col-10"><h2>Donec ullamcorper nulla non metus</h2>
+							<h3>September 04,2008</h3></div>
+						</div>
+					</div>
+<br>
+					<div id="box" class="container">
+						<div class="row">
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h1>NEWS LETTER SUBSCRIBE</h1></div>
+							<div class="col-10 offset-1"><input style="width: 100%; border-bottom: #ebebeb solid 1px" type="text" value="email adress"></div>
+							<div id="cach" class="col-4 offset-4"><input style="width: 100%; border-bottom: #ebebeb solid 1px" type="button" value="dang ki"></div>
+						</div>
+					</div>
+<br>
+					<div id="box" class="container">
+						<div class="row">
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h1>FACEBOOK FAN</h1></div>
+							<div id="cach" style="padding-bottom: 50px;" class="col-11"><img width="100%" src="img/bai-1-tin-tuc_27.jpg"></div>
+						</div>
+					</div>
+<br>
+					<div id="box" class="container">
+						<div class="row">
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h1>CATEGORIES</h1></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>aciform</h2></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>Cat A</h2></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>Cat B</h2></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>Cat C</h2></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>sub</h2></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>tech</h2></div>
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h2>Uncategorized</h2></div>
+						</div>
+					</div>
+<br>
+					<div id="box" class="container">
+						<div class="row">
+							<div style="border-bottom: #ebebeb solid 1px" class="col-12"><h1>CIRCLE US</h1></div>
+							<div class="col-12">&ensp;</div>
 						</div>
 					</div>
 				</div>
-
+			</div>
+		</div>
 	</div>
-	</div>
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+	<div id="footer" class="container">
+		<div class="row">
+
+			<div class="col-3">
+				<div class="container">
+					<div class="row">
+						<div style="border-bottom: #9898a0 dotted 1px" class="col-12"><h1>About Us</h1></div>	
+						<div class="row">
+						<div class="col-12">
+							<h2 style="word-wrap: break-word;">Donec dui sem,blandit vitae pharetra in,sem per at tortor.Cra sodales dui vitae sa pein eui smod accumsan.  Integer id quam ac. Gõ tiếng gì không hiểu nổi @@.</h2>
+						</div>
+						<div class="col-12">
+							<h2 style="word-wrap: break-word;">Donec dui sem,blandit vitae pharetra in,sem per at tortor.Cra sodales dui vitae sa pein eui smod accumsan.  Integer id quam ac. Gõ tiếng gì không hiểu nổi @@.</h2>
+						</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-3">
+					<div  class="row">
+						<div style="border-bottom: #9898a0 dotted 1px" class="col-11"><h1>Popular Posts</h1></div>
+					</div>
+					<div id="cach" class="row">
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-3"><img width="150%" src="img/bai-1-tin-tuc_22.jpg"></div>
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-8"><h2>Fusce dapibus tellus ac</h2>
+								<h3>September 04,2008</h3></div>
+					</div>
+					<div id="cach" class="row">
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-3"><img width="150%" src="img/bai-1-tin-tuc_22.jpg"></div>
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-8"><h2>Fusce dapibus tellus ac Fusce dapibus tellus ac</h2>
+								<h3>September 04,2008</h3></div>
+					</div>
+					<div id="cach" class="row">
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-3"><img width="150%" src="img/bai-1-tin-tuc_22.jpg"></div>
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-8"><h2>Fusce dapibus tellus ac dapibus tellus ac</h2>
+								<h3>September 04,2008</h3></div>
+					</div>
+			</div>
+
+			<div class="col-3">
+					<div class="row">
+						<div style="border-bottom: #9898a0 dotted 1px" class="col-12"><h1>Category Name</h1></div>
+					</div>
+					<div id="cach" class="row">
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-3"><img width="150%" src="img/bai-1-tin-tuc_22.jpg"></div>
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-9"><h2>Fusce dapibus tellus ac</h2>
+								<h3>September 04,2008</h3></div>
+					</div>
+					<div id="cach" class="row">
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-3"><img width="150%" src="img/bai-1-tin-tuc_22.jpg"></div>
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-9"><h2>Fusce dapibus tellus ac</h2>
+								<h3>September 04,2008</h3></div>
+					</div>
+					<div id="cach" class="row">
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-3"><img width="150%" src="img/bai-1-tin-tuc_22.jpg"></div>
+						<div style="border-bottom: #9898a0 dotted 1px; padding-bottom: 10px;" class="col-9"><h2>Fusce dapibus tellus ac</h2>
+								<h3>September 04,2008</h3></div>
+					</div>
+			</div>
+
+			<div class="col-3">
+					<div class="row">
+						<div style="border-bottom: #9898a0 dotted 1px" class="col-12"><h1>Flickr</h1></div>
+					</div>
+					<div id="cach" class="row">
+						<div class="col-3"><img width="130%" src="img/bai-1-tin-tuc_14.jpg"></div>
+						<div class="col-3"><img width="130%" src="img/bai-1-tin-tuc_14.jpg"></div>
+						<div class="col-3"><img width="130%" src="img/bai-1-tin-tuc_14.jpg"></div>
+						<div class="col-3">&ensp;</div>
+					</div>
+					<div id="cach" class="row">
+						<div class="col-3"><img width="130%" src="img/bai-1-tin-tuc_14.jpg"></div>
+						<div class="col-3"><img width="130%" src="img/bai-1-tin-tuc_14.jpg"></div>
+						<div class="col-3"><img width="130%" src="img/bai-1-tin-tuc_14.jpg"></div>
+						<div class="col-3">&ensp;</div>
+					</div>
+				
+			</div>
+
+			
+
+			
+	</div>
 </body>
 </html>
